# MTP_SFC_Parallelization

./: .gitignore  Algorithms.h  AssignmentFunctions.h  CMakeLists.txt  DelayCalculationFunctions.h  FileFunctions.h  FileReadingFunctions.h  HelperStructures.h  PhysicalGraph.h  README.md  ServiceFunctionChain.h  SimulationClass.h  Tests.h  TimeCalculationFunctions.h  Variables.h  VirtualMachines.h  VirtualNetworkFunctions.h  main.cpp
files_input/: ImportNetwork.java  range
files_input/Germany/: network_Germany.txt
files_input/India/: network_India.txt
files_input/NewYork/: network.txt  network_NewYork.txt
files_input/TA2/: network_TA2.txt
files_input/sample0/: SFCs.txt  VNFs.txt  VNFs2.txt  network.txt  network_sample0.txt  newSFC.txt  newVNF.txt  virtual_machines.txt
files_input/sample1/: network_sample1.txt
files_output/: clusterSizeEnumeration.txt  nCk_enumeration.txt
files_output/sample0/: SFCs_Parallel.txt  VNFs_ParallelPairs.txt
